2003-08-29  Christian Ruppert <arc@users.sf.net>
	* uwm/uwm.h, windows.c, uwm/init.c, uwm/menu.c: some more stiching in
	  of the new config system.
	* uwm/confparse.l, uwm/confparse.lex.l: renamed file from
	  uwm/confparse.l to uwm/confparse.lex.l for automake-compatible built.
	* uwm/confparse.y, uwm/confparse.tab.y: renamed file from
	  uwm/confparse.y to uwm/confparse.tab.y for automake-compatible built.
	* uwm/confparse.tab.y: added missing semicolons and empty actions for
	  typeless rules for bison compatibility.
	* uwm/Makefile.am: now uses automake's lex/yacc built procedure.
	* configure.in: added checks for flex and yacc.

2003-08-29  Christian Ruppert <arc@users.sf.net>
	* uwm/uwm.h, uwm/handlers.c, uwm/init.c, uwm/placement.c,
	  uwm/properties.c, uwm/resize.c, uwm/special.c, uwm/widgets.c,
	  uwm/windows.c: started stitching in new configuration system and made
	  some code cleanups. removed some static buffers.

2003-08-29  Christian Ruppert <arc@users.sf.net>
        * uwm/init.c(ReadConfigFile): corrected default configuration setting.
	* uwm/confparse.y, uwm/confparse.h: moved definition of
	  ConverterFunction prototype to header, added external converter table
	  definition to header.
	* uwm/confparse.y, uwm/confparse.h: added writable buffer to change
	  workspace name (libintl). default name set in init.c (ReadConfigFile).

2003-07     Christian Ruppert <arc@users.sf.net>
	* uwm/configconvertors.c: changed derefptr define to be safer (using
	  void* typecast for pointer arithmetic)
	* uwm/settings.h, uwm/confparse.h: moved uwm_init_index structure
	  where it belongs: to confparse.h
	* uwm/confparse.y, uwm/confparse.h: changed type of
	  uwm_init_index.offset to long.
	* uwm/configconvertors.c: changed convertor function to return error
	  strings in case resource allocation fails.
	* uwm/confparse.y: errors returned by convertor functions are now
	  being treated.
	* uwm/configconvertors.c: added convertor for font and color datatypes.