@@ -1,22 +1,23 @@
 #ifndef UWM_URM_H
 #define UWM_URM_H
 
-#define MAXEXTRAS (15)
+#define MAXEXTRAS (16)
 #define BACKGROUND (0)
 #define LIGHTCOLOR (1)
 #define SHADOWCOLOR (2)
 #define STANDARDTEXT (3)
 #define INACTIVETEXT (4)
-#define HIGHLIGHTEDTEXT (5)
-#define HIGHLIGHTEDBGR (6)
-#define TEXTCOLOR (7)
-#define TEXTBGR (8)
-#define BEVELWIDTH (9)
-#define FLAGS (10)
-#define STANDARDFONT (11)
-#define INACTIVEFONT (12)
-#define HIGHLIGHTFONT (13)
-#define TEXTFONT (14)
+#define INACTIVEBGR (5)
+#define HIGHLIGHTEDTEXT (6)
+#define HIGHLIGHTEDBGR (7)
+#define TEXTCOLOR (8)
+#define TEXTBGR (9)
+#define BEVELWIDTH (10)
+#define FLAGS (11)
+#define STANDARDFONT (12)
+#define INACTIVEFONT (13)
+#define HIGHLIGHTFONT (14)
+#define TEXTFONT (15)
 
 typedef struct _UDEXrdbEntry UDEXrdbEntry;
 
